--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:3001",
   "name": "sklep",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node-env-run server --exec nodemon",
+    "dev": "run-p server start"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +30,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-pino-logger": "^4.0.0",
+    "node-env-run": "^3.0.2",
+    "nodemon": "^1.19.2",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^1.4.5"
   }
 }
